beta ribbon z-index fixed

--- a/client/smarks.less
+++ b/client/smarks.less
@@ -351,6 +351,7 @@ ul.typeahead {
     position:fixed;
     bottom:0px;
     right:35px;
+    z-index:2;
 
     -webkit-transform: rotate(180deg);  /* Safari 3.1+, Chrome */
      -moz-transform: rotate(180deg);  /* Firefox 3.5-15 */
